<resources>
    <string name="app_name">MovieApps</string>
    <string name="title">Title</string>
    <string name="rating">Rating 8.2</string>
    <string name="date">2021-09-20</string>
    <string name="vote">vote 120</string>
    <string name="popularity">8.3</string>
    <string name="movie">Movies</string>
    <string name="tv">Tv</string>
    <string name="bookmark">Bookmark</string>
    <string name="overview">After saving the life of their heir apparent, tenacious loner Snake Eyes is welcomed into an ancient Japanese clan called the Arashikage where he is taught the ways of the ninja warrior. But, when secrets from his past are revealed, Snake Eyes honor and allegiance will be tested – even if that means losing the trust of those closest to him.</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="menu_bookmark">bookmark</string>
    <string name="network_error">Terjadi kesalahan</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="detail_tv">Detail Tv</string>
    <string name="img_desc">Gambar poster</string>
</resources>